// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductGridPrice /> should render with msrp 1`] = `
<Component
  product={
    {
      "price": {
        "currency": "EUR",
        "discount": 52,
        "info": "",
        "msrp": 0,
        "unitPrice": 10.95,
        "unitPriceMin": 10.95,
        "unitPriceStriked": 22.95,
      },
    }
  }
>
  <ProductGridPrice
    product={
      {
        "price": {
          "currency": "EUR",
          "discount": 52,
          "info": "",
          "msrp": 0,
          "unitPrice": 10.95,
          "unitPriceMin": 10.95,
          "unitPriceStriked": 22.95,
        },
      }
    }
  >
    <Grid
      className="tss-6kym9u-priceWrapper engage__product__product-grid-price"
      wrap={true}
    >
      <Grid.Item
        grow={1}
      >
        <Price
          currency="EUR"
          discounted={true}
          unitPrice={10.95}
          unitPriceMin={10.95}
        />
      </Grid.Item>
      <Grid.Item>
        <PriceStriked
          className="tss-w8bfvv-strikedPrice"
          currency="EUR"
          value={22.95}
        />
      </Grid.Item>
    </Grid>
    <PriceInfo
      className="tss-d5gejk-basicPrice"
      product={
        {
          "price": {
            "currency": "EUR",
            "discount": 52,
            "info": "",
            "msrp": 0,
            "unitPrice": 10.95,
            "unitPriceMin": 10.95,
            "unitPriceStriked": 22.95,
          },
        }
      }
      wrapper={[Function]}
    />
  </ProductGridPrice>
</Component>
`;

exports[`<ProductGridPrice /> should render with strike price 1`] = `
<Component
  product={
    {
      "price": {
        "currency": "EUR",
        "discount": 52,
        "info": "",
        "msrp": 0,
        "unitPrice": 10.95,
        "unitPriceMin": 10.95,
        "unitPriceStriked": 22.95,
      },
    }
  }
>
  <ProductGridPrice
    product={
      {
        "price": {
          "currency": "EUR",
          "discount": 52,
          "info": "",
          "msrp": 0,
          "unitPrice": 10.95,
          "unitPriceMin": 10.95,
          "unitPriceStriked": 22.95,
        },
      }
    }
  >
    <Grid
      className="tss-6kym9u-priceWrapper engage__product__product-grid-price"
      wrap={true}
    >
      <Grid.Item
        grow={1}
      >
        <Price
          currency="EUR"
          discounted={true}
          unitPrice={10.95}
          unitPriceMin={10.95}
        />
      </Grid.Item>
      <Grid.Item>
        <PriceStriked
          className="tss-w8bfvv-strikedPrice"
          currency="EUR"
          value={22.95}
        />
      </Grid.Item>
    </Grid>
    <PriceInfo
      className="tss-d5gejk-basicPrice"
      product={
        {
          "price": {
            "currency": "EUR",
            "discount": 52,
            "info": "",
            "msrp": 0,
            "unitPrice": 10.95,
            "unitPriceMin": 10.95,
            "unitPriceStriked": 22.95,
          },
        }
      }
      wrapper={[Function]}
    />
  </ProductGridPrice>
</Component>
`;

exports[`<ProductGridPrice /> should render without discounts 1`] = `
<Component
  product={
    {
      "price": {
        "currency": "EUR",
        "discount": 0,
        "info": "PriceInfoString",
        "msrp": 0,
        "unitPrice": 22.95,
        "unitPriceMin": 22.95,
        "unitPriceStriked": 0,
      },
    }
  }
>
  <ProductGridPrice
    product={
      {
        "price": {
          "currency": "EUR",
          "discount": 0,
          "info": "PriceInfoString",
          "msrp": 0,
          "unitPrice": 22.95,
          "unitPriceMin": 22.95,
          "unitPriceStriked": 0,
        },
      }
    }
  >
    <Grid
      className="tss-6kym9u-priceWrapper engage__product__product-grid-price"
      wrap={true}
    >
      <Grid.Item
        grow={1}
      >
        <Price
          currency="EUR"
          discounted={false}
          unitPrice={22.95}
          unitPriceMin={22.95}
        />
      </Grid.Item>
    </Grid>
    <PriceInfo
      className="tss-d5gejk-basicPrice"
      product={
        {
          "price": {
            "currency": "EUR",
            "discount": 0,
            "info": "PriceInfoString",
            "msrp": 0,
            "unitPrice": 22.95,
            "unitPriceMin": 22.95,
            "unitPriceStriked": 0,
          },
        }
      }
      wrapper={[Function]}
    />
  </ProductGridPrice>
</Component>
`;
